--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,6 +4,7 @@
   "description": "RESTful API",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -15,7 +16,9 @@
     "express": "^4.17.1",
     "fast-csv": "^4.3.2",
     "mongoose": "^5.10.11",
+    "morgan": "^1.10.0",
     "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.6",
     "papaparse": "^5.3.0",
     "request": "^2.88.2"
   },
